--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,16 @@
 :root {
+    --color-primary-main: #6159cb;
+    --color-primary-light: #dcd9fb;
+    --color-primary-dark: #5fb47b;
+
+    --color-text-main: #495057;
+    --color-text-light: #7a7f9a;
+    --color-text-dark: ;
+
+    --header-height-mobile: 58px;
+    --header-height-web: 70px;
+
+    --bg-color-main: #e6ebf5;
 }
 
 * {
@@ -14,9 +26,10 @@ html {
 
 body {
     font-family: 'Inter', sans-serif;
+    /* font-family: 'Public Sans', sans-serif; */
     line-height: 1.2;
     font-weight: 400;
-    color: #333;
+    color: #495057;
 }
 
 article,
@@ -32,12 +45,12 @@ nav,
 section {
     display: block;
 }
-body {
-    line-height: 1;
-}
+
 ol,
 ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 blockquote,
 q {
@@ -55,7 +68,15 @@ table {
     border-spacing: 0;
     display: block;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
 h1 {
     font-size: 3.2rem;
 }
@@ -73,11 +94,13 @@ h4 {
 }
 
 h5 {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
+    color: #495057;
+    font-weight: 600;
 }
 
 h6 {
-    font-size: 1.4rem;
+    font-size: 1.3rem !important;
 }
 
 p,
@@ -103,4 +126,127 @@ button {
 
 button:hover {
     cursor: pointer;
+}
+
+.main-bg {
+    background-color: var(--color-primary-main);
+    /* background-color: #6159CB; */
+}
+
+.danger {
+    color: #ff4842;
+}
+
+.online {
+    background-color: #06d6a0;
+}
+
+.nav-link.activated {
+    background-color: var(--bg-color-main);
+}
+
+/* .nav-link.activated * {
+    color: white;
+} */
+
+.nav-link {
+    color: #495057;
+}
+
+.btn-primary {
+    padding: 10px 20px;
+    background-color: #7269ef;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    color: white;
+    font-weight: 500;
+    min-width: 120px;
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: #6159cb;
+}
+
+.hidden {
+    display: none;
+}
+
+.un-hidden {
+    display: block !important;
+}
+
+.badge {
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+
+.modal-250 {
+    min-width: 310px;
+    max-width: 400px;
+}
+
+input[type='text'] {
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 18px;
+}
+
+input[type='text']::placeholder {
+    font-size: 1.4rem;
+}
+.bg-light {
+    background-color: #e6ebf5 !important;
+}
+
+.primary-bgcolor {
+    background-color: #7269ef;
+}
+
+.secondary-bgcolor {
+    background-color: #f5f7fb;
+}
+
+.color-white {
+    color: white;
+}
+
+.text-color-dark {
+    color: #212529;
+}
+
+.modal-400 {
+    max-width: 420px;
+    height: 90%;
+}
+
+.btn-secondary {
+    background-color: white;
+    color: #6159cb;
+}
+.btn-secondary:hover {
+    text-decoration: underline;
+}
+
+/* .scroll-bar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+    border-radius: 10px;
+} */
+
+.scroll-bar::-webkit-scrollbar {
+    width: 8px;
+    background-color: transparent;
+}
+
+.scroll-bar:hover::-webkit-scrollbar {
+    width: 8px;
+    background-color: #f5f5f5;
+}
+
+.scroll-bar:hover::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #D1D6DB
 }
