--- a/src/index.css
+++ b/src/index.css
@@ -189,9 +189,10 @@ button:hover {
 
 input[type='text'] {
     outline: none;
-    border: none;
+    /* border: none; */
     border-radius: 4px;
     padding: 10px 18px;
+    border: 1px solid #ede2ff;
 }
 
 input[type='text']::placeholder {
