--- a/src/index.css
+++ b/src/index.css
@@ -261,3 +261,10 @@ input[type='text']::placeholder {
 .dropdown-language {
     font-size: 1.5rem;
 }
+
+
+@media only screen and (max-width: 576px) {
+    html {
+        font-size: 9px;
+    }
+}
