--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -240,3 +240,28 @@
         opacity: 0;
     }
 }
+
+
+@media only screen and (max-width: 576px) {
+    .login-img-container {
+        display: none;
+    }
+
+    .login-wrapper {
+        padding-right: 0;
+        padding-left: 0;
+        padding-top: 1rem;
+        text-align: center;
+        margin-bottom: 1.5rem;
+    }
+
+    .login-page-content >*{
+        padding-right: 2rem !important;
+        padding-left: 2rem !important;
+        margin: 0;
+    }
+
+    .login-form-wrapper h2 {
+        font-size: 20px;
+    }
+}
