--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -65,3 +65,28 @@
     display: flex;
     align-items: flex-end;
 }
+
+
+
+@media only screen and (max-width: 576px) {
+    .register-img-container{
+        display: none;
+    }
+
+    .register-wrapper {
+        padding-right: 0;
+        padding-left: 0;
+        padding-top: 1rem;
+        text-align: center;
+        margin-bottom: 1.5rem;
+    }
+
+    .register-page-content >*:nth-child(2){
+        padding-bottom: 0 !important;
+        margin: 0;
+    }
+
+    .login-form-wrapper h2 {
+        font-size: 20px;
+    }
+}
