--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,13 +1,17 @@
 .navbar-container {
     max-width: 70px;
     /* min-width: 75px; */
-    box-shadow: 0 2px 4px rgb(15 34 58 / 12%);
+    box-shadow: 0px 4px 4px rgb(66 11 161 / 20%);
     height: 100vh;
     color: #878a92;
+    /* background-color:#7269ef; */
+    background-color: #fafbff;
+    /* border: 1px solid #333; */
+    z-index: 100;
 }
 
 .home-container {
-    min-height: 100vh;
+    max-height: 100vh;
 }
 
 .over-home-screen {
@@ -74,7 +78,7 @@
 .sidebar-container {
     min-width: 380px;
     max-width: 380px;
-    background-color: #f5f7fb;
+    background-color: #fafbff;
 }
 
 .sidebar-main {
@@ -183,13 +187,13 @@
 }
 
 .chat-list li a {
-    padding: 12px 1rem;
+    padding: 1rem 1rem;
     border-radius: 4px;
     transition: all 0.4s;
 }
 
 .chat-list {
-    height: 518px;
+    height: 450px;
     overflow-y: auto;
 }
 
@@ -219,7 +223,7 @@
     position: absolute;
     bottom: 1%;
     right: 3%;
-    z-index: 100;
+    z-index: 1;
 }
 
 .chat-header {
@@ -238,6 +242,20 @@
     border-radius: 50%;
     overflow: hidden;
     /* object-fit: cover; */
+}
+
+.avatar-lg {
+    width: 70px;
+    height: 70px;
+    padding: 4px;
+    background: rgba(66, 11, 161, 0.1);
+}
+
+.avatar-lg > * {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .avatar-xs {
@@ -259,8 +277,48 @@
     display: inline;
     margin: 0 auto;
     height: 100%;
-    width: auto;
+    width: 100%;
 }
+
+.onlineUser {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px #f5f8ff;
+}
+
+.onlineUser-name {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.onlineUser-avt {
+    height: 55px;
+    border-radius: 5px;
+    /* overflow: hidden; */
+}
+
+.onlineUser-avt::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    bottom: -5px;
+    background-color: #49e073;
+    width: 10px;
+    height: 10px;
+    border: 2px solid #fff;
+    border-radius: 50px;
+}
+
+.onlineUser-avt img {
+    max-width: 55px;
+    border-radius: 5px;
+    height: 100%;
+    object-fit: cover;
+}
+
 .chat-header-nav {
     margin-right: 1.5rem;
 }
@@ -280,6 +338,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .chat-header li > * {
@@ -618,22 +677,39 @@
     background-color: #f7f7f7;
     /* background-image: url('./../../assets/img/chat-bg.png'); */
     /* object-fit: contain; */
+    --webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 /* sider bar */
 .right-sidebar {
-    background-color: #fafbff;
     opacity: 100%;
     transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     -ms-transition: all 0.5s ease;
     position: relative;
-    /* width: 320px; */
-    padding: 15px 20px 0;
-    height: 100%;
+    height: 100vh;
+    border-left: 3px solid #f0eff5;
 }
 .right-sidebar-container {
-    max-width: 350px !important;
+    max-width: 370px !important;
+    padding: 0;
+    --webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    height: 100vh;
+}
+
+.right-header-icon {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #ee00ab;
+    color: #fff;
+    cursor: pointer;
+}
+
+.right-sidebar-media {
+    margin-bottom: 2rem;
 }
 
 @media only screen and (max-width: 576px) {
@@ -649,7 +725,7 @@
         display: none !important;
     }
 
-    .navbar-wrapper >:last-child {
+    .navbar-wrapper > :last-child {
         display: none !important;
     }
     .modal-250 {
@@ -672,6 +748,123 @@
         transform: translate3d(-10.575px, -150.2px, 0px) !important;
         overflow: hidden;
     }
+}
+
+.right-sidebar-name {
+    font-weight: 600;
+}
+
+.right-sidebar > *:first-child {
+    border-bottom: 1px solid #eaeaf1;
+    padding: 1.5rem;
+}
+
+.online-profile > span {
+    padding-left: 15px;
+}
+.online-profile > span::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 7px;
+    background-color: #49e073;
+    width: 8px;
+    height: 8px;
+    border-radius: 50px;
+}
+
+.right-sidebar-info,
+.right-sidebar-media,
+.right-sidebar-file {
+    border-top: 1px solid #f0eff5;
+    padding-right: 2rem;
+    padding-left: 2rem;
+}
+
+.right-sidebar-security {
+    border-top: 1px solid #f0eff5;
+}
+
+.right-sidebar-info-item {
+    line-height: 1.3;
+}
+
+.right-sidebar-info-item p {
+    font-size: 1.4rem;
+    color: var(--color-text-light);
+    font-weight: 500;
+}
+.right-sidebar-info-item h5 {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+.right-sidebar-security {
+    font-weight: 500;
+}
+
+.right-sidebar-info-wrapper {
+    overflow-y: auto !important;
+    overflow: hidden;
+    height: 475px;
+}
+
+.right-sidebar-media-list {
+    gap: 6px;
+}
+
+.right-sidebar-media-list li {
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.right-sidebar-media-list li img {
+    width: 72px;
+    height: 72px;
+    object-fit: cover;
+}
+
+.right-sidebar-file-list li {
+    border: 1px solid #e6ebf5;
+    border-radius: 5px;
+}
+
+.right-sidebar-file-list li div:nth-child(2) h5 {
+    max-width: 150px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.right-sidebar-file-list li div:nth-child(3) {
+    width: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.right-sidebar-file-list h5 {
+    font-size: 1.4rem;
+}
+.right-sidebar-file-list span {
+    font-size: 1.3rem;
+}
+.file-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+    background-color: #dcd9fb;
+    color: var(--color-primary-main);
+    border-radius: 5px;
+}
+
+.right-sidebar-security p {
+    cursor: pointer;
+}
+
+.right-sidebar-security p:hover {
+    background-color: var(--bg-color-main);
 }
 
 @media only screen and (max-width: 900px) {
@@ -707,7 +900,7 @@
         padding-left: 2rem;
     }
 
-    .navbar-wrapper> div {
+    .navbar-wrapper > div {
         max-width: 50px;
         max-height: 50px;
     }
